libremedy-ticket-perl (0.7) UNRELEASED; urgency=low

  * more fixes to group assignment

 -- Tim Skirvin <tskirvin@stanford.edu>  Thu, 30 Apr 2009 15:01:13 -0700

libremedy-ticket-perl (0.6) lenny; urgency=low

  * should be able to actually assign to a group.

 -- Tim Skirvin <tskirvin@stanford.edu>  Thu, 26 Mar 2009 12:30:46 -0700

libremedy-ticket-perl (0.5) lenny; urgency=low

  * actual new remedy-ticket code

 -- Tim Skirvin <tskirvin@stanford.edu>  Mon, 23 Mar 2009 16:13:10 -0700

libremedy-ticket-perl (0.4) lenny; urgency=low

  * lots of work to remedy-ticket to make it modular and useful
  * releasing

 -- Tim Skirvin <tskirvin@stanford.edu>  Mon, 23 Mar 2009 15:26:22 -0700

libremedy-ticket-perl (0.3) UNRELEASED; urgency=low

  * set_status now requires a reason in most cases
  * 'pending' type in remedy-ticket
  * remedy-ticket documentation re-write to make it easier to manage
  * added 'close' and 'punt' aliases in remedy-ticket, plus fixed 'unassign'

 -- Tim Skirvin <tskirvin@stanford.edu>  Fri, 20 Mar 2009 11:50:49 -0700

libremedy-ticket-perl (0.2) intrepid UNRELEASED; urgency=low

  * Should actually work.
  * Put time_spent code back into Ticket.pm and remedy-ticket
  * Incident.pm now looks for 'assigned_groups' in limit_pre ().
  * remedy-ticket now can pass 'assigned_groups' properly.
  * remedy-ticket user searching fixes.
  * updated the short list formatting in Incident::text_short ().
  * remedy-ticket now accepts just a ticket number as an argument

 -- Tim Skirvin <tskirvin@stanford.edu>  Fri, 13 Mar 2009 12:39:19 -0700

libremedy-ticket-perl (0.1) intrepid UNRELEASED; urgency=low

  * Initial forked version.

 -- Tim Skirvin <tskirvin@stanford.edu>  Thu, 12 Mar 2009 13:30:17 -0700